force-app/main/default/objects/Participant_Intake__c/Participant_Intake__c.object-meta.xml
<CustomObject>
    <label>Participant Intake</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Participant Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>