force-app/main/default/objects/Participant_Intake__c/fields/Emergency_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_State__c</fullName>
    <label>Emergency Contact State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>