force-app/main/default/objects/Participant_Intake__c/fields/Emergency_Contact_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Zip_Code__c</fullName>
    <label>Emergency Contact Zip Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>