force-app/main/default/objects/Participant_Intake__c/fields/Food_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps__c</fullName>
    <label>Food Stamps (check one):</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>