force-app/main/default/objects/Participant_Intake__c/fields/Free_Reduced_Lunch_pick_one__c.field-meta.xml
<CustomField>
    <fullName>Free_Reduced_Lunch_pick_one__c</fullName>
    <label>Free/ Reduced Lunch (pick one):</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>