force-app/main/default/objects/Participant_Intake__c/fields/How_many_people_live_in_your_household__c.field-meta.xml
<CustomField>
    <fullName>How_many_people_live_in_your_household__c</fullName>
    <inlineHelpText>(including self)</inlineHelpText>
    <label>How many people live in your household?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>