force-app/main/default/objects/Participant_Intake__c/fields/My_child_is_a_member_of__c.field-meta.xml
<CustomField>
    <fullName>My_child_is_a_member_of__c</fullName>
    <inlineHelpText>Check all CircEsteem programs that apply)</inlineHelpText>
    <label>My child is a member of:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CircEsteem_Programs</valueSetName>
    </valueSet>
</CustomField>