force-app/main/default/objects/Participant_Intake__c/fields/Other_Race__c.field-meta.xml
<CustomField>
    <fullName>Other_Race__c</fullName>
    <label>Other Race</label>
    <length>80</length>
    <type>Text</type>
</CustomField>