force-app/main/default/objects/Participant_Intake__c/fields/Parent_Guardian_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Address__c</fullName>
    <label>Parent/ Guardian Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>