force-app/main/default/objects/Participant_Intake__c/fields/Parent_Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Email__c</fullName>
    <label>Parent/ Guardian Email</label>
    <type>Email</type>
</CustomField>