force-app/main/default/objects/Participant_Intake__c/fields/Parent_Guardian_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Phone_Number__c</fullName>
    <label>Parent/ Guardian Phone Number</label>
    <type>Phone</type>
</CustomField>