force-app/main/default/objects/Participant_Intake__c/fields/What_is_your_annual_household_income__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_annual_household_income__c</fullName>
    <label>What is your annual household income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$16,900</fullName>
            </value>
            <value>
                <fullName>$16,901-21,300</fullName>
            </value>
            <value>
                <fullName>$21,301-25,750</fullName>
            </value>
            <value>
                <fullName>$25,751-30,170</fullName>
            </value>
            <value>
                <fullName>$30,171-34,190</fullName>
            </value>
            <value>
                <fullName>$34,591-39,000</fullName>
            </value>
            <value>
                <fullName>$39,001-43,430</fullName>
            </value>
            <value>
                <fullName>$43,431-45,000</fullName>
            </value>
            <value>
                <fullName>$45,001-75,000</fullName>
            </value>
            <value>
                <fullName>$75,001-100,000</fullName>
            </value>
            <value>
                <fullName>Over $100,000</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>