force-app/main/default/objects/Participant_Intake__c/fields/What_should_we_know_about_your_child__c.field-meta.xml
<CustomField>
    <fullName>What_should_we_know_about_your_child__c</fullName>
    <inlineHelpText>(i.e. Medical Conditions, Emotional Conditions, Medical Allergies, Food Allergies etc.)</inlineHelpText>
    <label>What should we know about your child?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>